cmake_minimum_required(VERSION 3.14)
project(c_plus_study)

set(CMAKE_CXX_STANDARD 14)

#add_subdirectory(plus_c_demo/day_1)

#add_subdirectory(plus_c_demo/demo/day_2)
#add_subdirectory(plus_c_demo/demo/day_3)
#add_subdirectory(plus_c_demo/vip_day_1)
#add_subdirectory(plus_c_demo/vip_day_2)
#add_subdirectory(plus_c_demo/vip_day_3)
#add_subdirectory(plus_c_demo/vip_day_4)
add_subdirectory(plus_c_demo/demo/day_4)